--- a/vercel.json
+++ b/vercel.json
@@ -3,8 +3,7 @@
   "builds": [
     {
       "src": "package.json",
-      "use": "@vercel/remix",
-      "config": { "remixCloudflare": true }
+      "use": "@vercel/remix"
     }
   ],
   "routes": [
