--- a/package.json
+++ b/package.json
@@ -63,6 +63,8 @@
     "storybook": "^7.6.17",
     "vite": "^5.1.0",
     "vite-jsconfig-paths": "^2.0.1",
+    "vite-plugin-glsl": "^1.3.1",
+    "vitest": "^3.0.5",
     "wrangler": "^3.24.0"
   },
   "engines": {
